10.5.2013 git
- deltasql.tex compiles with miktex

8.5.2013 git
- cleanup: moving graphdata scripts into graphdata subfolder

*******************************
1.6.1 Release Notes (10.5.2013)
 
  New features:  navigation bar on the left for faster switch between pages
                                  
  Fixes:         Copy&Paste works also in Internet Explorer
  
  Known Issues:  Copy&Paste link disappears after being clicked once
                 
  Documentation: one new FAQ entry on why deltasql is so different from commercial tools. 
                 New webpage is part of the package in web subfolder
                  
*******************************

2.5.2013 git
- added donations page with paypal and bitcoin address

30.4.2013 git
- fixing install routine (some undefined variables in head.inc.php while installing)
- fixing an error in the newly generated configuration script

27.4.2013 git
- added one FAQ entries on why deltasql is so cool :-D

26.4.2013 git
- ZeroClipboard works now even in IE, but for some reason the link disappears after it was clicked

25.4.2013 git
- added colors to tables
- tried another way to do copy paste (which does not work)
- upgrading zeroClipboard library to 1.1.7

23.4.2013 git
- minor improvements to navigation
- TODO: understand why copy & paste does not work

22.4.2013 git
- implementing navigation with frames
- unifying title height

21.4.2013 git
- adding two webpages on http://deltasql.sf.net : try online and download. adding some testimonials and screenshots to pepper it up.

20.4.2013 git
- improving deltasql website on deltasql.sf.net (table layout)

18.4.2013 git
- docu cleanup and removal of parameter involved in statistics collection

*******************************
1.6.0 Release Notes (17.4.2013)
 
  New features:  timing of synchronization script generation and of some key PHP pages
                 deltaclient compiled for Linux (Gnome and Unity)